--- a/11_ggplot2_bausteine.Rmd
+++ b/11_ggplot2_bausteine.Rmd
@@ -379,6 +379,31 @@ gapminder %>%
 
 Für Ozeanien erhalten wir so z.B. eine Unterteilung in Australien (`TRUE`) und Neuseeland (`FALSE`).
 
+
+Die Beschriftung der Spalten sieht so natürlich nicht besonders schön aus. Ohne den Code ist die Beschriftung auch nicht zu verstehen, "Was ist wahr??".
+
+Daher versuchen wir die Beschriftung über das Argument `labeller` der `facet_grid()` Funktion zu ändern. Zulässige Werte für das Argument `labeller` können über die `labeller()` Funktion definiert werden. Hier hat man neben weiteren Optionen die Möglichkeit für jede Ausprägung der Variable, die eine Spalten- (oder Zeilen-) Aufteilung definiert, ein Label zu setzen. Dazu muss
+die Variable über ihren Namen aufgerufen werden. Nun scheint es so, dass ein Aufruf über "Sondernamen" wie ``pop > 5000000`` nicht funktioniert. Um trotzdem die Verwendung von `labeller` zu illustrieren, definieren wir zuerst mit `mutate` eine neue Variable `pop5` und setzen anschließend die Labels über das Argument `labeller`.
+
+
+
+```{r}
+gapminder %>%
+  mutate(pop5 = pop > 5000000) %>%
+  group_by(continent) %>%
+  ggplot(aes(x = year, y = gdpPercap )) +  
+  geom_point(size = 0.9) +
+  geom_smooth(linetype = 2) +
+  facet_grid(continent ~ pop5, scales = "free",
+             labeller = labeller(
+               pop5 = c(`TRUE` = "pop large than 5 MM", 
+                        `FALSE` = "pop at most 5 MM")))
+
+```
+
+
+
+
 ## Themes
 
 Abschließend wollen wir noch über verschiedene `themes` sprechen. Über `themes` kann man das Aussehen der nicht datenbezogenen Elemente einer Grafik, wie z.B.
