--- a/packages.bib
+++ b/packages.bib
@@ -3,39 +3,39 @@
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2020},
+  year = {2021},
   url = {https://www.R-project.org/},
 }
 
 @Manual{R-bookdown,
   title = {bookdown: Authoring Books and Technical Documents with R Markdown},
   author = {Yihui Xie},
-  year = {2021},
-  note = {R package version 0.24},
+  year = {2022},
+  note = {R package version 0.28},
   url = {https://CRAN.R-project.org/package=bookdown},
 }
 
 @Manual{R-devtools,
   title = {devtools: Tools to Make Developing R Packages Easier},
-  author = {Hadley Wickham and Jim Hester and Winston Chang},
+  author = {Hadley Wickham and Jim Hester and Winston Chang and Jennifer Bryan},
   year = {2021},
-  note = {R package version 2.4.2},
+  note = {R package version 2.4.3},
   url = {https://CRAN.R-project.org/package=devtools},
 }
 
 @Manual{R-dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
   author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
-  year = {2021},
-  note = {R package version 1.0.7},
+  year = {2022},
+  note = {R package version 1.0.8},
   url = {https://CRAN.R-project.org/package=dplyr},
 }
 
 @Manual{R-DT,
   title = {DT: A Wrapper of the JavaScript Library DataTables},
   author = {Yihui Xie and Joe Cheng and Xianying Tan},
-  year = {2021},
-  note = {R package version 0.19},
+  year = {2022},
+  note = {R package version 0.22},
   url = {https://github.com/rstudio/DT},
 }
 
@@ -58,8 +58,8 @@
 @Manual{R-knitr,
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
-  year = {2021},
-  note = {R package version 1.33},
+  year = {2022},
+  note = {R package version 1.39},
   url = {https://yihui.org/knitr/},
 }
 
@@ -73,17 +73,17 @@
 
 @Manual{R-readr,
   title = {readr: Read Rectangular Text Data},
-  author = {Hadley Wickham and Jim Hester},
-  year = {2021},
-  note = {R package version 2.0.1},
+  author = {Hadley Wickham and Jim Hester and Jennifer Bryan},
+  year = {2022},
+  note = {R package version 2.1.2},
   url = {https://CRAN.R-project.org/package=readr},
 }
 
 @Manual{R-rmarkdown,
   title = {rmarkdown: Dynamic Documents for R},
   author = {JJ Allaire and Yihui Xie and Jonathan McPherson and Javier Luraschi and Kevin Ushey and Aron Atkins and Hadley Wickham and Joe Cheng and Winston Chang and Richard Iannone},
-  year = {2021},
-  note = {R package version 2.11},
+  year = {2022},
+  note = {R package version 2.15},
   url = {https://CRAN.R-project.org/package=rmarkdown},
 }
 
@@ -99,31 +99,31 @@
   title = {tibble: Simple Data Frames},
   author = {Kirill Müller and Hadley Wickham},
   year = {2021},
-  note = {R package version 3.1.2},
+  note = {R package version 3.1.6},
   url = {https://CRAN.R-project.org/package=tibble},
 }
 
 @Manual{R-tidyr,
   title = {tidyr: Tidy Messy Data},
-  author = {Hadley Wickham},
-  year = {2021},
-  note = {R package version 1.1.3},
+  author = {Hadley Wickham and Maximilian Girlich},
+  year = {2022},
+  note = {R package version 1.2.0},
   url = {https://CRAN.R-project.org/package=tidyr},
 }
 
 @Manual{R-tidyverse,
   title = {tidyverse: Easily Install and Load the Tidyverse},
   author = {Hadley Wickham},
-  year = {2021},
-  note = {R package version 1.3.1},
+  year = {2022},
+  note = {R package version 1.3.2},
   url = {https://CRAN.R-project.org/package=tidyverse},
 }
 
 @Manual{R-usethis,
   title = {usethis: Automate Package and Project Setup},
-  author = {Hadley Wickham and Jennifer Bryan},
+  author = {Hadley Wickham and Jennifer Bryan and Malcolm Barrett},
   year = {2021},
-  note = {R package version 2.0.1},
+  note = {R package version 2.1.5},
   url = {https://CRAN.R-project.org/package=usethis},
 }
 
